feat: installing diesel and dotenv

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 actix = "0.13.0"
 actix-web = "4.0.1"
+diesel = { version="1.4.8", features = ["postgres"] }
+dotenv = "0.15.0"
