--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ actix = "0.13.0"
 actix-web = "4.0.1"
 diesel = { version="1.4.8", features = ["postgres"] }
 dotenv = "0.15.0"
+serde = "1.0.136"
+serde_derive = "1.0.136"
+serde_json = "1.0.79"
